--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
+    <title>ALBIN SHAJU | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>ALBIN SHAJU</h1>
         <p>Web Developer | Designer | Programmer</p>
     </header>
     <nav>
@@ -20,7 +20,7 @@
         <section id="about" class="section about">
             <h2>About Me</h2>
             <img src="profile.png" alt="Profile Picture" class="profile-pic">
-            <p>Hello! I am Your Name, a passionate web developer with expertise in HTML, CSS, JavaScript, and more. I love creating beautiful and functional websites.</p>
+            <p>Hello! I am ALBIN SHAJU, a passionate web developer with expertise in HTML, CSS, JavaScript, and more. I love creating beautiful and functional websites.</p>
         </section>
         <section id="projects" class="section projects">
             <h2>Projects</h2>
@@ -40,7 +40,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 ALBIN SHAJU. All rights reserved.</p>
     </footer>
 </body>
 </html>
