--- a/index.html
+++ b/index.html
@@ -40,7 +40,4 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 ALBIN SHAJU. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+        <p>&copy; 2024 ALBIN S
