--- a/index.html
+++ b/index.html
@@ -40,4 +40,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 ALBIN S
+        <p>&copy; 2024 ALBIN SHAJU. All rights reserved.</p>
+    </footer>
+</body>
+</html>
